Refactor app to use ES6 modules, enhance logging with Winston, and improve error handling. Updated MongoDB connection and GitHub integration logic. Added utility functions for user validation and access token verification. Adjusted routes and middleware for better structure and clarity.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "github-integration-app",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www"
